--- a/requirements.txt
+++ b/requirements.txt
@@ -41,4 +41,4 @@ typing_extensions==4.11.0
 tzdata==2024.1
 urllib3==2.2.1
 wheel==0.41.2
-wisecube_sdk @ git+https://github.com/wisecubeai/wisecube-python-sdk@main
+wisecube==1.1.0
